linkler.txt
-bcc tutorial: https://eunomia.dev/tutorials/1-helloworld/#installing-the-necessary-software-and-tools
-ubuntu bpf setup: https://thegraynode.io/posts/bpf_dev_env/
-ubuntu bcc setup: https://www.flamingbytes.com/blog/how-to-install-bcc-on-ubuntu-22-04/
-video example: https://www.youtube.com/watch?v=lrSExTfS-iQ&list=PLDX-f9ry9CQIASlBBlrlY06Tgnh4gLThn&index=1
-tc filters: https://fedepaol.github.io/blog/2023/04/06/ebpf-tc-filters-for-egress-traffic/
-bpf reference guide: https://docs.cilium.io/en/stable/reference-guides/bpf/index.html
-bcc documentation: https://github.com/iovisor/bcc/blob/master/docs/reference_guide.md#1-kprobes
		    https://bcc.readthedocs.io/en/stable/
-bcc source code: https://github.com/iovisor/bcc
-classful queueing disciplines: https://tldp.org/HOWTO/Adv-Routing-HOWTO/lartc.qdisc.classful.html
-bpf header file: https://github.com/torvalds/linux/blob/master/include/uapi/linux/bpf.h
-ebpf for humans: https://medium.com/@ilaygilman
-bcc version issue solution: https://github.com/iovisor/bcc/issues/3993

https://stackoverflow.com/questions/77193520/how-do-i-activate-a-bcc-ebpf-program-that-modifies-outgoing-egress-network-traff

error:
/virtual/main.c:5:5: error: type name requires a specifier or qualifier
    __uint(type, BPF_MAP_TYPE_ARRAY);
    ^
/virtual/main.c:5:12: error: a parameter list without types is only allowed in a function definition
    __uint(type, BPF_MAP_TYPE_ARRAY);
           ^
/virtual/main.c:6:5: error: type name requires a specifier or qualifier
    __uint(max_entries, MAX_INTERFACE);
    ^
/virtual/main.c:6:25: error: expected identifier
    __uint(max_entries, MAX_INTERFACE);
                        ^
/virtual/main.c:2:23: note: expanded from macro 'MAX_INTERFACE'
#define MAX_INTERFACE 16
                      ^
/virtual/main.c:6:5: error: duplicate member '__uint'
    __uint(max_entries, MAX_INTERFACE);
    ^
/virtual/main.c:5:5: note: previous declaration is here
    __uint(type, BPF_MAP_TYPE_ARRAY);
    ^
/virtual/main.c:7:5: error: type name requires a specifier or qualifier
    __type(key, __u32);
    ^
/virtual/main.c:7:17: error: unexpected type name '__u32': expected identifier
    __type(key, __u32);
                ^
/virtual/main.c:7:12: error: a parameter list without types is only allowed in a function definition
    __type(key, __u32);
           ^
/virtual/main.c:8:5: error: type name requires a specifier or qualifier
    __type(value, __u32);
    ^
/virtual/main.c:8:19: error: unexpected type name '__u32': expected identifier
    __type(value, __u32);
                  ^
/virtual/main.c:8:12: error: a parameter list without types is only allowed in a function definition
    __type(value, __u32);
           ^
/virtual/main.c:8:5: error: duplicate member '__type'
    __type(value, __u32);
    ^
/virtual/main.c:7:5: note: previous declaration is here
    __type(key, __u32);
    ^
/virtual/main.c:9:2: error: expected ';' after struct
} interface_map SEC(".maps");
 ^
/virtual/main.c:9:3: error: unknown type name 'interface_map'
} interface_map SEC(".maps");
  ^
/virtual/main.c:9:21: error: expected parameter declarator
} interface_map SEC(".maps");
                    ^
/virtual/main.c:9:21: error: expected ')'
/virtual/main.c:9:20: note: to match this '('
} interface_map SEC(".maps");
                   ^
16 errors generated.
Traceback (most recent call last):
  File "/root/tc_deneme/tc_test/tc_test.py", line 8, in <module>
    b = BPF(src_file="tc_test.c")
  File "/usr/lib/python3/dist-packages/bcc-0.32.0+9e390e97-py3.10.egg/bcc/__init__.py", line 505, in __init__
Exception: Failed to compile BPF module b'tc_test.c'
